Added readme. Cosmetic changes.

--- a/main.tex
+++ b/main.tex
@@ -18,8 +18,8 @@
 \usepackage{blindtext}
 
 % title, author, thanks, date -------------------------------------------------
-\title{Sample title}
-\author{M Luntinen\thanks{my-email@jyu.fi}}
+\title{Sample Title}
+\author{M Luntinen\thanks{miha.s.p.luntinen@jyu.fi}}
 \date{\today}
 
 \begin{document}\maketitle
